removed projects and blogs

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
       <!-- Breadcrumb End -->
 
       <!-- Blog Section Start -->
-      <section class="blog-wrap pt-100 pb-75 bg-albastor">
+      <!-- <section class="blog-wrap pt-100 pb-75 bg-albastor">
         <div class="container">
           <div class="section-title style1 text-center mb-40">
             <span>My Programming Journey</span>
@@ -86,7 +86,7 @@
             
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Blog Section End -->
 
     </div>
